--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html lag= "en-US">
+<!DOCTYPE html lang= "en-US">
  <head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -15,18 +15,18 @@
     </header>
     <main>
         <h1>Alfonso Habana Rosales | WDD130</h1>
-        <center><img src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200"></center>
+        <img src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
        <p>Hello, I am Alfonso Habana Rosales.</p>
         <p>I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking.</p>
         <p> This is my first document. I hope it upload well</p>
 
     </main>
     <footer>
-        <center>
+        
             <p>©️2024</p>
             <p>Alfonso Habana Rosales</p>
             <p>Mexico, Mexico</p>
-        </center>
+        
 
     </footer>
  </body>
