--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
  <head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="I'm Alfonso, I stuidy in BYU, this page is my practice to learn HTML and CSS code.">
+    <meta name="author" content="Alfonso Habana Rosales">
+
+    <link rel="sltylesheet" href="styles/styles.css">
+
     <title>Alfonso Habana Rosales | WDD130</title>
  </head>
  <body>
@@ -22,6 +27,10 @@
         <p> This is my first document. I hope it upload well</p>
 
     </main>
+    <aside><h2> Estado de Mexico, Mexico </h2>
+        <img src="images/catrin.jpg" alt="This is a catrin, it's normal in these days" width="200">
+        <p>The State of Mexico (EdoMex) is the first state of the country from there come many states and also the capital of the country before separating from EdoMex.</p>
+    </aside>
     <footer>
         
             <p>©️2024</p>
