--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Alfonso Habana Rosales">
 
     <title>Alfonso Habana Rosales | WDD130</title>
-    <link rel="sltylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
  </head>
  <body>
     <header>
