--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,2 +1,36 @@
 <!DOCTYPE html> 
  <html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Romanesco&display=swap" rel="stylesheet">
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Road+Rage&family=Romanesco&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trip.html">Trip</a>
+                <a href="contact.html">Contact Us</a>
+
+            </nav>
+
+        </header>
+
+        <main>
+
+        </main>
+
+        <footer>
+
+
+        </footer>
+    </body>
