--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,28 @@
         </header>
 
         <main>
+            <div class="hero">
+                <h1>WhiteWater Rafting</h1>
+                <article>
+                    <img src="images/hero2.jpg" alt="Happy Friends in Rafting">
+                    <p>Create an easy-to-navigate website, making it easy for you to learn about, quote and schedule a wonderful family experience at WhiteWater Rafting. Allowing all adventurous hearts to have a pleasant experience from the beginning (our website) to the end, to the extent that you will want to share this experience and even come again. </p>
 
+                </article>
+            </div>
+            <section>
+                <h2>History</h2>
+                <p>In 1968, 2 men (Alfonso y Habana) thought how help thear home, this is the form how WhiteWater Rafting was maken </p>
+            </section>
+
+            <section>
+                <h2>Adventure Awaits You!</h2>
+                <img src="images/hero1.jpg" alt="Aventure">
+                <img src="images/hero3.jpg" alt="Is">
+                <img src="images/hero4.jpg" alt="Waiting">
+                <img src="images/hero5.jpg" alt="For">
+                <img src="images/hero6.jpg" alt="U">
+
+            </section>
         </main>
 
         <footer>
