--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Road+Rage&family=Romanesco&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
@@ -51,7 +51,15 @@
         </main>
 
         <footer>
+            <p>©️2024</p>
+            <p>WhiteWater Rafting</p>
+            <p>Mexico, Mexico</p>
 
+            <nav>
+                <a href="https://facebook.com"><img src="images/fb.svg" alt="Facebook"></a>
+                <a href="https://instagram.com"><img src="images/insta.svg" alt="Instagram"></a>
+                <a href="https://twitter.com"><img src="images/twi.svg" alt="Twitter"></a>
+            </nav>
 
         </footer>
     </body>
