--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <header>
+            <img class="logo" src="images/logo.png" alt="Logo">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -31,7 +32,7 @@
                 <article>
                     <img src="images/hero2.jpg" alt="Happy Friends in Rafting">
                     <p>Create an easy-to-navigate website, making it easy for you to learn about, quote and schedule a wonderful family experience at WhiteWater Rafting. Allowing all adventurous hearts to have a pleasant experience from the beginning (our website) to the end, to the extent that you will want to share this experience and even come again. </p>
-
+                
                 </article>
             </div>
             <section>
@@ -44,7 +45,7 @@
                 <img src="images/hero1.jpg" alt="Aventure">
                 <img src="images/hero3.jpg" alt="Is">
                 <img src="images/hero4.jpg" alt="Waiting">
-                <img src="images/hero5.jpg" alt="For">
+                <img src="images/hero5 (1).jpg" alt="For">
                 <img src="images/hero6.jpg" alt="U">
 
             </section>
