--- a/wwr/about.html
+++ b/wwr/about.html
@@ -42,11 +42,13 @@
 
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/hero1.jpg" alt="Aventure">
-                <img src="images/hero3.jpg" alt="Is">
-                <img src="images/hero4.jpg" alt="Waiting">
-                <img src="images/hero5 (1).jpg" alt="For">
-                <img src="images/hero6.jpg" alt="U">
+                <ul>
+                <li><img src="images/hero1.jpg" alt="Aventure"></li>
+                <li><img src="images/hero3.jpg" alt="Is"></li>
+                <li><img src="images/hero4.jpg" alt="Waiting"></li>
+                <li><img src="images/hero5 (1).jpg" alt="For"></li>
+                <li><img src="images/hero6.jpg" alt="U"></li>
+                </ul>
 
             </section>
         </main>
