--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/about.html">Rafting Webste</a>
+            <a href="wwr/about.html">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rarting Site Plan</a>
         </nav>
     </header>
