--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,9 +30,10 @@
             <div class="hero">
                 <h1>WhiteWater Rafting</h1>
                 <article>
+                    <aside>
                     <img src="images/hero2.jpg" alt="Happy Friends in Rafting">
                     <p>Create an easy-to-navigate website, making it easy for you to learn about, quote and schedule a wonderful family experience at WhiteWater Rafting. Allowing all adventurous hearts to have a pleasant experience from the beginning (our website) to the end, to the extent that you will want to share this experience and even come again. </p>
-                
+                    </aside>
                 </article>
             </div>
             <section>
