--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,9 +15,11 @@
     </head>
     <body>
         <header>
-            <img  src="images/logo.png" alt="Logo">
+            
 
             <nav>
+                <img  src="images/logo.png" alt="Logo">
+
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trip.html">Trip</a>
@@ -36,7 +38,7 @@
 
                     <aside>
 
-                        <img src="images/hero2.jpg" alt="Happy Friends in Rafting">
+                        <img src="images/hero2.jpg" alt="Happy Friends in Rafting" width="200">
                         <p>Create an easy-to-navigate website, making it easy for you to learn about, quote and schedule a wonderful family experience at WhiteWater Rafting. Allowing all adventurous hearts to have a pleasant experience from the beginning (our website) to the end, to the extent that you will want to share this experience and even come again. </p>
                     
                     </aside>
@@ -67,9 +69,9 @@
             <p>Mexico, Mexico</p>
 
             <nav>
-                <a href="https://facebook.com"><img src="images/fb.svg" alt="Facebook"></a>
-                <a href="https://instagram.com"><img src="images/insta.svg" alt="Instagram"></a>
-                <a href="https://twitter.com"><img src="images/twi.svg" alt="Twitter"></a>
+                <a href="https://facebook.com"><img src="images/fb.svg" alt="Facebook" width="50"></a>
+                <a href="https://instagram.com"><img src="images/insta.svg" alt="Instagram" width="50"></a>
+                <a href="https://twitter.com"><img src="images/twi.svg" alt="Twitter" width="50"></a>
             </nav>
 
         </footer>
