--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
 
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
-                <a href="trip.html">Trip</a>
+                <a href="trips.html">Trip</a>
                 <a href="contact.html">Contact Us</a>
 
             </nav>
