--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="I'm Alfonso, I stuidy in BYU, this page is my practice to learn HTML and CSS code.">
+        <meta name="author" content="Alfonso Habana Rosales">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Romanesco&display=swap" rel="stylesheet">
@@ -76,3 +79,4 @@
 
         </footer>
     </body>
+</html>
