--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Road+Rage&family=Romanesco&display=swap" rel="stylesheet">
 
+        <title>Alfonso Habana Rosales | WDD130</title>
+
         <link rel="stylesheet" href="styles/rafting.css">
+
+
     </head>
     <body>
         <header>
@@ -35,8 +39,9 @@
 
         <main>
             <div class="hero">
-                <h1 class="road-rage-regular">WhiteWater Rafting</h1>
+                
                 <article>
+                    <h1 class="road-rage-regular">WhiteWater Rafting</h1>
                     
                     <img src="images/hero2.jpg" alt="Happy Friends in Rafting" >
                     <p>Create an easy-to-navigate website, making it easy for you to learn about, quote and schedule a wonderful family experience at WhiteWater Rafting. Allowing all adventurous hearts to have a pleasant experience from the beginning (our website) to the end, to the extent that you will want to share this experience and even come again. </p>
@@ -55,7 +60,7 @@
                 <li><img src="images/hero1.jpg" alt="Aventure"></li>
                 <li><img src="images/hero3.jpg" alt="Is"></li>
                 <li><img src="images/hero4.jpg" alt="Waiting"></li>
-                <li><img src="images/hero5 (1).jpg" alt="For"></li>
+                <li><img src="images/hero5.jpg" alt="For"></li>
                 <li><img src="images/hero6.jpg" alt="U"></li>
                 </ul>
 
