--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,10 +23,10 @@
     <body>
         <header>
             
-            <img class="logo" src="images/logo.png" alt="Logo">
-
+            <figure><img class="logo" src="images/logo.png" alt="Logo"><figcaption class="logo">
+                <h1>WhiteWater Rafting</h1></figcaption></figure>
             <nav>
-                <h1 class="road-rage-regular">WhiteWater Rafting</h1>
+                
                 <ul class="navegation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
