--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,8 +23,7 @@
     <body>
         <header>
             
-            <figure><img class="logo" src="images/logo.png" alt="Logo"><figcaption class="logo">
-                <h1>WhiteWater Rafting</h1></figcaption></figure>
+            <figure><img src="images/logo.png" alt="Logo">
             <nav>
                 
                 <ul class="navegation">
@@ -55,7 +54,7 @@
 
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <ul class="evi">
+                <ul>
                 <li><figure><img src="images/hero1.jpg" alt="Aventure"><figcaption>Waterfall of doom</figcaption>
                 </figure></li>
                 <li><figure><img src="images/hero3.jpg" alt="Is"><figcaption>The fall of the hero</figcaption>
