--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,12 +26,11 @@
             <img src="images/logo.png" alt="Logo">
             <nav>
                 
-                <ul >
-                <li><a href="index.html" class="nosubraya">Home</a></li>
-                <li><a href="about.html" class="nosubraya">About Us</a></li>
-                <li><a href="trips.html" class="nosubraya">Trip</a></li>
-                <li><a href="contact.html" class="nosubraya">Contact Us</a></li>
-                </ul>
+                
+                <a href="index.html" class="nosubraya">Home</a>
+                <a href="about.html" class="nosubraya">About Us</a>
+                <a href="trips.html" class="nosubraya">Trip</a>
+                <a href="contact.html" class="nosubraya">Contact Us</a>
             </nav>
 
         </header>
@@ -57,15 +56,15 @@
             <section class="box1">
                 <h2>Adventure Awaits You!</h2>
                 <ul>
-                <li><figure><img src="images/hero1.jpg" alt="Aventure"><figcaption>Waterfall of doom</figcaption>
+                <li><figure><img src="images/hero1.jpg" alt="Aventure" class="imevi"><figcaption>Waterfall of doom</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero3.jpg" alt="Is"><figcaption>The fall of the hero</figcaption>
+                <li><figure><img src="images/hero3.jpg" alt="Is" class="imevi"><figcaption>The fall of the hero</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero4.jpg" alt="Waiting"><figcaption>Lake La Paz</figcaption>
+                <li><figure><img src="images/hero4.jpg" alt="Waiting" class="imevi"><figcaption>Lake La Paz</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero5.jpg" alt="For"><figcaption>Tusk River</figcaption>
+                <li><figure><img src="images/hero5.jpg" alt="For" class="imevi"><figcaption>Tusk River</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero6.jpg" alt="U"><figcaption>Aventure calling</figcaption>
+                <li><figure><img src="images/hero6.jpg" alt="U" class="imevi"><figcaption>Aventure calling</figcaption>
                 </figure></li>
                 </ul>
 
