--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Alfonso Habana Rosales | WDD130</h1>
-        <img src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
-       <p>Hello, I am Alfonso Habana Rosales.</p>
-        <p>I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking.</p>
-        <p> This is my first document. I hope it upload well</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank">Arequipa, Peru</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/culiacan-mexico-temple?lang=eng" target="_blank">Culiacan, Mexico</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/mexico-city-mexico-temple?lang=eng" target="_blank">Mexico City, Mexico</a></li>
-        </ul>
+    <div class="grid">
+        <main>
+            <h1>Alfonso Habana Rosales | WDD130</h1>
+            <img src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
+            <p>Hello, I am Alfonso Habana Rosales.</p>
+            <p>I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking.</p>
+            <p> This is my first document. I hope it upload well</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank">Arequipa, Peru</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/culiacan-mexico-temple?lang=eng" target="_blank">Culiacan, Mexico</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/mexico-city-mexico-temple?lang=eng" target="_blank">Mexico City, Mexico</a></li>
+            </ul>
 
-    </main>
-    <aside class="box"><h2> Estado de Mexico, Mexico </h2>
-        <img src="images/catrin.jpg" alt="This is a catrin, it's normal in these days" width="200">
-        <p>The State of Mexico (EdoMex) is the first state of the country from there come many states and also the capital of the country before separating from EdoMex.</p>
-    </aside>
+        </main>
+        <aside class="box"><h2> Estado de Mexico, Mexico </h2>
+            <img src="images/catrin.jpg" alt="This is a catrin, it's normal in these days" width="200">
+            <p>The State of Mexico (EdoMex) is the first state of the country from there come many states and also the capital of the country before separating from EdoMex.</p>
+        </aside>
+    </div>
     <footer>
         
             <p>©️2024</p>
