--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,21 +50,23 @@
             </div>
             <section class="box1">
                 <h2>History</h2>
-                <p>In 1968, 2 men (Alfonso y Habana) thought how help thear home, this is the form how WhiteWater Rafting was maken </p>
+                <p class="izq">In 1968, 2 men (Alfonso y Habana) thought how help thear home, this is the form how WhiteWater Rafting was maken </p>
+                <img src="images/hero6.jpg" alt="Los reperesentantes" class="imevi2" >
+
             </section>
 
             <section class="box1">
                 <h2>Adventure Awaits You!</h2>
-                <ul>
-                <li><figure><img src="images/hero1.jpg" alt="Aventure" class="imevi"><figcaption>Waterfall of doom</figcaption>
+                <ul class="alinera">
+                <li class="aliniea1"><figure><img src="images/hero1.jpg" alt="Aventure" class="imevi"><figcaption>Waterfall of doom</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero3.jpg" alt="Is" class="imevi"><figcaption>The fall of the hero</figcaption>
+                <li class="aliniera2"><figure><img src="images/hero3.jpg" alt="Is" class="imevi"><figcaption>The fall of the hero</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero4.jpg" alt="Waiting" class="imevi"><figcaption>Lake La Paz</figcaption>
+                <li class="aliniera3"><figure><img src="images/hero4.jpg" alt="Waiting" class="imevi"><figcaption>Lake La Paz</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero5.jpg" alt="For" class="imevi"><figcaption>Tusk River</figcaption>
+                <li class="aliniera4"><figure><img src="images/hero5.jpg" alt="For" class="imevi"><figcaption>Tusk River</figcaption>
                 </figure></li>
-                <li><figure><img src="images/hero6.jpg" alt="U" class="imevi"><figcaption>Aventure calling</figcaption>
+                <li class="aliniera5"><figure><img src="images/hero6.jpg" alt="U" class="imevi"><figcaption>Aventure calling</figcaption>
                 </figure></li>
                 </ul>
 
