--- a/quizz.html
+++ b/quizz.html
@@ -11,8 +11,21 @@
     </head>
     <body>
         <header>
-            <h1>HTML Quizz</h1> 
+            <h1>Basic HTML and CSS Quiz</h1> 
         </header>   
-        
+        <main>
+            <form>
+                <fieldset>
+                    <legend>How do you need start a archive HTML?</legend>
+                    <label for="q1">Write the answer</label>
+                    <input type="text" id="q1" name="q1">
+                </fieldset>
+                <fieldset>
+                    <legend>How do you need start a archive HTML?</legend>
+                    <label for="q2">Write the answer</label>
+                    <input type="text" id="q2" name="q2">
+                </fieldset>
+            </form>
+        </main>
     </body>
  </html>
