--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,6 +36,7 @@
         </header>
 
         <main>
+            <!--No se como separar la imagen de lo demas-->
             <br>
             <br>
             <br>
@@ -93,10 +94,48 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d370999.70656622114!2d-114.23096804407517!3d43.40973304521549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2smx!4v1729395526452!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <p></p>
             </div>
+            <section class="box1">
 
+                <ul class="alinera">
+                    <li class="aliniea1"><figure><img src="" alt="Poncho" class="imevi"><figcaption></figcaption>Poncho</figure></li>
+                    <li class="aliniea2"><figure><img src="" alt="Bertho" class="imevi"><figcaption></figcaption>Bertho</figure></li>
+                    <li class="aliniea3"><figure><img src="" alt="Bertha" class="imevi"><figcaption></figcaption>Bertha</figure></li>
+                </ul>
 
+            </section>
+            <section class="box1">
 
-        
+                <form>
+                    <legend>User Information</legend>
+                    <br>
+                    <label for="fullname">Instroduce your name</label>
+                    <input type="text" id="fullname" name="fullname">
+                    <br>
+                    <label for="email">Instroduce your name</label>
+                    <input type="email" id="email" name="email">
+                    <br>
+                    <legend>Your comment</legend>
+                    <br>
+                    <input type="radio" id="gi" name="comment" value="gi">
+                    <label for="gi">General Inquiry</label>
+                    <br>
+                    <input type="radio" id="rq" name="comment" value="rq">
+                    <label for="rq">Reservation Question</label>
+                    <br>
+                    <input type="radio" id="ws" name="comment" value="ws">
+                    <label for="ws">Website Suggestion</label>
+                    <br>
+                    <label for="qanda">Write your comment</label>
+                    <input type="text" id="qanda" name="qanda">
+                    <br>
+                    <input type="checkbox" id="subcribe" name="subcribe" value="subcribe">
+                    <label for="subcribe">Do you want to receive our weekly news</label>
+                    <br>
+                    <input type="submit" value="SUBMIT">
+                </form>
+
+            </section>
+
         </main>
 
         <footer>
