--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -16,7 +16,7 @@
 
         <title>Alfonso Habana Rosales | WDD130</title>
 
-        <link rel="stylesheet" href="styles/contact.css">
+        <link rel="stylesheet" href="styles/rafting.css">
 
 
     </head>
@@ -97,9 +97,9 @@
             <section class="box1">
 
                 <ul class="alinera">
-                    <li class="aliniea1"><figure><img src="" alt="Poncho" class="imevi"><figcaption></figcaption>Poncho</figure></li>
-                    <li class="aliniea2"><figure><img src="" alt="Bertho" class="imevi"><figcaption></figcaption>Bertho</figure></li>
-                    <li class="aliniea3"><figure><img src="" alt="Bertha" class="imevi"><figcaption></figcaption>Bertha</figure></li>
+                    <li class="aliniea1"><figure><img src="images/empl1.jpeg" alt="Poncho" class="imevi"><figcaption></figcaption>Poncho</figure></li>
+                    <li class="aliniea2"><figure><img src="images/empl2.jpeg" alt="Bertho" class="imevi"><figcaption></figcaption>Bertho</figure></li>
+                    <li class="aliniea3"><figure><img src="images/empl3.jpeg" alt="Bertha" class="imevi"><figcaption></figcaption>Bertha</figure></li>
                 </ul>
 
             </section>
