--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -97,9 +97,9 @@
             <section class="box1">
 
                 <ul class="alinera">
-                    <li class="aliniea1"><figure><img src="images/empl1.jpeg" alt="Poncho" class="imevi"><figcaption></figcaption>Poncho</figure></li>
-                    <li class="aliniea2"><figure><img src="images/empl2.jpeg" alt="Bertho" class="imevi"><figcaption></figcaption>Bertho</figure></li>
-                    <li class="aliniea3"><figure><img src="images/empl3.jpeg" alt="Bertha" class="imevi"><figcaption></figcaption>Bertha</figure></li>
+                    <li class="aliniera1"><figure><img src="images/empl1.jpeg" alt="Poncho" class="imevi"><figcaption></figcaption>Poncho</figure></li>
+                    <li class="aliniera2"><figure><img src="images/empl2.jpeg" alt="Bertho" class="imevi"><figcaption></figcaption>Bertho</figure></li>
+                    <li class="aliniera3"><figure><img src="images/empl3.jpeg" alt="Bertha" class="imevi"><figcaption></figcaption>Bertha</figure></li>
                 </ul>
 
             </section>
