--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,7 +47,7 @@
             <br>
             <br>
             <div class="center" >
-                <h1>Contact Us</h1>
+                <h1 class="box2">Contact Us</h1>
 
 <!--Tabla de Emails-->
             
