--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -111,7 +111,7 @@
                     <label for="fullname">Instroduce your name</label>
                     <input type="text" id="fullname" name="fullname">
                     <br>
-                    <label for="email">Instroduce your name</label>
+                    <label for="email">Instroduce your e-mail</label>
                     <input type="email" id="email" name="email">
                     <br>
                     <legend>Your comment</legend>
