--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -126,13 +126,13 @@
                     <label for="ws">Website Suggestion</label>
                     <br>
                     <label for="qanda">Write your comment</label>
-                    <input type="text" id="qanda" name="qanda">
+                    <input type="textarea" id="qanda" name="qanda">
                     <br>
                     <input type="checkbox" id="subcribe" name="subcribe" value="subcribe">
                     <label for="subcribe">Do you want to receive our weekly news</label>
                     <br>
                     <br>
-                    <input type="submit" value="SUBMIT">
+                    <input type="submit" value="submet now">
                 </form>
 
             </section>
