--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Road+Rage&family=Romanesco&display=swap" rel="stylesheet">
 
-        <title>Alfonso Habana Rosales | WDD130</title>
+        <title>Contact | WhiteWater Rafting</title>
 
         <link rel="stylesheet" href="styles/rafting.css">
 
