--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -95,16 +95,16 @@
                 <p></p>
             </div>
             <section class="box1">
-
+                <h2>We are looking forward to know your opinion</h2>
                 <ul class="alinera">
-                    <li class="aliniera1"><figure><img src="images/empl1.jpeg" alt="Poncho" class="imevi"><figcaption></figcaption>Poncho</figure></li>
-                    <li class="aliniera2"><figure><img src="images/empl2.jpeg" alt="Bertho" class="imevi"><figcaption></figcaption>Bertho</figure></li>
-                    <li class="aliniera3"><figure><img src="images/empl3.jpeg" alt="Bertha" class="imevi"><figcaption></figcaption>Bertha</figure></li>
+                    <li class="aliniera1"><figure><img src="images/empl1.jpeg" alt="Poncho" class="imevi"><figcaption>Poncho</figcaption></figure></li>
+                    <li class="aliniera2"><figure><img src="images/empl2.jpeg" alt="Bertho" class="imevi"><figcaption>Bertho</figcaption></figure></li>
+                    <li class="aliniera3"><figure><img src="images/empl3.jpeg" alt="Bertha" class="imevi"><figcaption>Bertha</figcaption></figure></li>
                 </ul>
 
             </section>
             <section class="box1">
-
+                <h2>Survey</h2>
                 <form>
                     <legend>User Information</legend>
                     <br>
