--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -126,7 +126,7 @@
                     <label for="ws">Website Suggestion</label>
                     <br>
                     <label for="qanda">Write your comment</label>
-                    <input type="textarea" id="qanda" name="qanda">
+                    <textarea name="qanda" id="qanda"></textarea>
                     <br>
                     <input type="checkbox" id="subcribe" name="subcribe" value="subcribe">
                     <label for="subcribe">Do you want to receive our weekly news</label>
