--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -106,14 +106,13 @@
             <section class="box1">
                 <h2>Survey</h2>
                 <form>
-                    <legend>User Information</legend>
-                    <br>
                     <label for="fullname">Instroduce your name</label>
                     <input type="text" id="fullname" name="fullname">
                     <br>
                     <label for="email">Instroduce your e-mail</label>
                     <input type="email" id="email" name="email">
                     <br>
+                    <fieldset>
                     <legend>Your comment</legend>
                     <br>
                     <input type="radio" id="gi" name="comment" value="gi">
@@ -125,6 +124,7 @@
                     <input type="radio" id="ws" name="comment" value="ws">
                     <label for="ws">Website Suggestion</label>
                     <br>
+                    </fieldset>
                     <label for="qanda">Write your comment</label>
                     <textarea name="qanda" id="qanda"></textarea>
                     <br>
