--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -103,7 +103,7 @@
                 </ul>
 
             </section>
-            <section class="box1">
+            <section class="box3">
                 <h2>Survey</h2>
                 <form>
                     <label for="fullname">Instroduce your name</label>
@@ -132,7 +132,7 @@
                     <label for="subcribe">Do you want to receive our weekly news</label>
                     <br>
                     <br>
-                    <input type="submit" value="submet now">
+                    <input type="submit" value="submit now">
                 </form>
 
             </section>
