--- a/wwr/index.html
+++ b/wwr/index.html
@@ -48,6 +48,7 @@
                     <p>Are you looking for a new adventure or just a good time? Well, here it is, enjoy taming the fast flowing rivers or swimming over the lake calm and relaxed, or just have a barbecue near one. Come and enjoy our plans to spend time with family, friends and girlfriend or boyfriend. </p>
                     
                 </article>
+
             </div>
 
             <section class="box3">
@@ -68,6 +69,41 @@
                 </form>
 
             </section>
+
+            <!--Carrusel de imagenes-->
+
+            <div class="slider-box">
+                <ul>
+                    <li>
+                        <img src="images/hero2.jpg" alt="Aventure Offer">
+                        <div class="txt">
+                            <h2>Enjoy Our Offers</h2>
+                            <p>Animate</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/hero4.jpg" alt="Aventure Call">
+                        <div class="txt">
+                            <h2></h2>
+                            <p>Animate</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/hero3.jpg" alt="Aventure Call">
+                        <div class="txt">
+                            <h2>The fall of the hero</h2>
+                            <p>Animate</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/hero1.jpg" alt="Aventure Call">
+                        <div class="txt">
+                            <h2>Waterfall of doom</h2>
+                            <p>Animate</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
         </main>
 
