--- a/wwr/index.html
+++ b/wwr/index.html
@@ -41,11 +41,11 @@
                 <img src="images/hero2.jpg" alt="Happy Friends in Rafting" >
                 <h1 class="road-rage-regular,center">WhiteWater Rafting</h1>
 
-                <article class="box1">
+                <article class="text vidrio">
                     
                    <!-- <img src="images/logo.png" alt="Happy Friends in Rafting" > -->
                     <p class="center">Hi Adventurer,</p> 
-                    <p>Are you looking for a new adventure or just a good time? Well, here it is, enjoy taming the fast flowing rivers or swimming over the lake calm and relaxed, or just have a barbecue near one. Come and enjoy our plans to spend time with family, friends and girlfriend or boyfriend. </p>
+                    <p class=>Are you looking for a new adventure or just a good time? Well, here it is, enjoy taming the fast flowing rivers or swimming over the lake calm and relaxed, or just have a barbecue near one. Come and enjoy our plans to spend time with family, friends and girlfriend or boyfriend. </p>
                     
                 </article>
 
@@ -75,32 +75,32 @@
             <div class="slider-box">
                 <ul>
                     <li>
-                        <img src="images/hero2.jpg" alt="Aventure Offer">
-                        <div class="txt">
-                            <h2>Enjoy Our Offers</h2>
-                            <p>Animate</p>
-                        </div>
+                        <a href="contact.html"><img src="images/hero2.jpg" alt="Aventure Offer">
+                        <div class="txt vidrio">
+                            <h2>Contact Us and Enjoy Our Offers</h2>
+                            <p>Santa Claus is at home and is giving away trips with up to 50% off. Don't miss out and enjoy this great Christmas experience.</p>
+                        </div></a>
                     </li>
                     <li>
-                        <img src="images/hero4.jpg" alt="Aventure Call">
-                        <div class="txt">
-                            <h2></h2>
-                            <p>Animate</p>
-                        </div>
+                        <a href="trips.html"><img src="images/hero4.jpg" alt="Aventure Call">
+                        <div class="txt vidrio">
+                            <h2>Fang River</h2>
+                            <p>Challenge your strength and fearlessness to face this wild river, can you face it without running away?</p>
+                        </div></a>
                     </li>
                     <li>
-                        <img src="images/hero3.jpg" alt="Aventure Call">
+                        <a href="trips.html"><img src="images/hero3.jpg" alt="Aventure Call">
                         <div class="txt">
                             <h2>The fall of the hero</h2>
-                            <p>Animate</p>
-                        </div>
+                            <p>If you think you are a lucky hero, try to overcome this route where even heroes fall. Do you think you are able to overcome a challenge where even the heroes are humiliated?</p>
+                        </div></a>
                     </li>
                     <li>
-                        <img src="images/hero1.jpg" alt="Aventure Call">
+                        <a href="trips.html"><img src="images/hero1.jpg" alt="Aventure Call">
                         <div class="txt">
                             <h2>Waterfall of doom</h2>
                             <p>Animate</p>
-                        </div>
+                        </div></a>
                     </li>
                 </ul>
             </div>
