--- a/wwr/index.html
+++ b/wwr/index.html
@@ -41,7 +41,7 @@
                 <img src="images/hero2.jpg" alt="Happy Friends in Rafting" >
                 <h1 class="road-rage-regular,center">WhiteWater Rafting</h1>
 
-                <article class="text vidrio">
+                <article class="vidrio">
                     
                    <!-- <img src="images/logo.png" alt="Happy Friends in Rafting" > -->
                     <p class="center">Hi Adventurer,</p> 
@@ -84,22 +84,22 @@
                     <li>
                         <a href="trips.html"><img src="images/hero4.jpg" alt="Aventure Call">
                         <div class="txt vidrio">
-                            <h2>Fang River</h2>
-                            <p>Challenge your strength and fearlessness to face this wild river, can you face it without running away?</p>
+                            <h2>Lake La Paz</h2>
+                            <p>Find a place to spend time with your loved ones where you can enjoy peace and tranquility, how about this place, it's a place to spend time with parents and children or to have a beautiful date with the person you love.</p>
                         </div></a>
                     </li>
                     <li>
                         <a href="trips.html"><img src="images/hero3.jpg" alt="Aventure Call">
-                        <div class="txt">
+                        <div class="txt vidrio">
                             <h2>The fall of the hero</h2>
                             <p>If you think you are a lucky hero, try to overcome this route where even heroes fall. Do you think you are able to overcome a challenge where even the heroes are humiliated?</p>
                         </div></a>
                     </li>
                     <li>
                         <a href="trips.html"><img src="images/hero1.jpg" alt="Aventure Call">
-                        <div class="txt">
+                        <div class="txt vidrio">
                             <h2>Waterfall of doom</h2>
-                            <p>Animate</p>
+                            <p>Challenge your strength and fearlessness to face this wild river, can you face it without running away? </p>
                         </div></a>
                     </li>
                 </ul>
