--- a/wwr/index.html
+++ b/wwr/index.html
@@ -45,7 +45,7 @@
                     
                    <!-- <img src="images/logo.png" alt="Happy Friends in Rafting" > -->
                     <p class="center">Hi Adventurer,</p> 
-                    <p class=>Are you looking for a new adventure or just a good time? Well, here it is, enjoy taming the fast flowing rivers or swimming over the lake calm and relaxed, or just have a barbecue near one. Come and enjoy our plans to spend time with family, friends and girlfriend or boyfriend. </p>
+                    <p >Are you looking for a new adventure or just a good time? Well, here it is, enjoy taming the fast flowing rivers or swimming over the lake calm and relaxed, or just have a barbecue near one. Come and enjoy our plans to spend time with family, friends and girlfriend or boyfriend. </p>
                     
                 </article>
 
@@ -54,13 +54,14 @@
             <section class="box3">
                 <h2>Survey</h2>
                 <form>
-                    <label for="fullname">Instroduce your name</label>
-                    <input type="text" id="fullname" name="fullname">
-                    <br>
-                    <label for="email">Instroduce your e-mail</label>
-                    <input type="email" id="email" name="email">
-                    <br>
                     <fieldset>
+                        <label for="fullname">Instroduce your name</label>
+                        <input type="text" id="fullname" name="fullname">
+                        <br>
+                        <label for="email">Instroduce your e-mail</label>
+                        <input type="email" id="email" name="email">
+                        <br>
+                    </fieldset>
                     <input type="checkbox" id="subcribe" name="subcribe" value="subcribe">
                     <label for="subcribe">Do you want to receive our weekly news</label>
                     <br>
