--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         </main>
         <aside class="box"><h2> Estado de Mexico, Mexico </h2>
-            <img src="images/catrin.jpg" alt="This is a catrin, it's normal in these days" width="200">
+            <img class="separ" src="images/catrin.jpg" alt="This is a catrin, it's normal in these days" width="200">
             <p>The State of Mexico (EdoMex) is the first state of the country from there come many states and also the capital of the country before separating from EdoMex.</p>
         </aside>
     </div>
